--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "react-bootstrap": "^2.7.0"
+    "react-bootstrap": "^2.7.0",
+    "react-rating-stars-component": "^2.2.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
